--- a/meals/templates/meal_checkin.html
+++ b/meals/templates/meal_checkin.html
@@ -1,10 +1,12 @@
-{% extends "base.html" %}
+{% extends "base_tabs.html" %}
 
 {% load static %}
+{% load bootstrap3 %}
+{% load i18n %}
 
-{% block head %}
+{% block extra_head %}
 
-    <script type="text/javascript" src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
+  {% include 'include/import_qr_scanner.html' %}
 
 {% endblock %}
 
@@ -12,189 +14,107 @@
 
 
 
-{% block head_title %}Check-in meal {{meal.name}}{% endblock %}
+{% block head_title %}Check-in meal {{ meal.name }}{% endblock %}
 
 {% block body_plain %}
-<style>
-  body {
-    margin-bottom: 30px !important;
-  }
-</style>
-<div class="container-fluid full-screen">
+  <style>
+    body {
+      margin-bottom: 30px !important;
+    }
+  </style>
+  <div class="container-fluid full-screen">
     <div class="row full-screen">
 
       <div class="container" style="margin-top:60px;">
-            <!-- <a class="btn btn-default btn-block" href="{% url 'meals_list' %}">< Back</a> -->
-            <div class="form-group">
-              <label class="control-label" for="btndivs" > Select Camera</label>
-              <select id="btndivs" class="form-control" onchange="changeCam();" >
-                <option value="null">--</option>
-              </select>
-            </div>
-                <div id="success" class="alert alert-success alert-dismissible fade in" style="display:none; background-color: #367a3a;">
-                  <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-                  <strong>Success!</strong> <span id="succ"></span>
-                </div>
-                <div id="no" class="alert alert-danger alert-dismissible fade in" style="display:none; background-color: #691e1e;">
-                  <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-                  <strong>ERROR!</strong> <span id="deny"></span>
-                </div>
+        <!-- <a class="btn btn-default btn-block" href="{% url 'meals_list' %}">< Back</a> -->
 
-                <video id="preview" style="height: auto; width: 100%;"></video>
-                <!-- <div class="form-group">
-                  <label class="control-label" for="company" > Scan Duration</label>
-                  <input type="range" min="1000" max="5000" id="time" value="2000" step="100">
-                  <span id="dtime">2000 ms</span>
-                </div> -->
-                <script>
+        <div id="success" class="alert alert-success alert-dismissible fade in"
+             style="display:none; background-color: #367a3a;">
+          <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+          <strong>Success!</strong> <span id="succ"></span>
+        </div>
+        <div id="no" class="alert alert-danger alert-dismissible fade in"
+             style="display:none; background-color: #691e1e;">
+          <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+          <strong>ERROR!</strong> <span id="deny"></span>
+        </div>
 
-                  let opts = {
-                    // OPTIONS OF QR CODE SCANNER
-                    // Leave this to true if you want to continiously scan qrs.. think so :)
-                    continuous: true,
+        <video id="qr-video" style="width: 100%; height: 100%; "></video>
+        <script nonce="{{ request.csp_nonce }}">
+          // set timer bool
+          isReady = true;
 
-                    // The HTML element to use for the camera's video preview. Must be a <video> element.
-                      // When the camera is active, this element will have the "active" CSS class, otherwise,
-                      // it will have the "inactive" class. By default, an invisible element will be created to
-                      // host the video.
-                      video: document.getElementById('preview'),
+          // Load qr video and add function to execute when scans a qr
+          document.addEventListener('DOMContentLoaded', () => {
+            let scanner = new Scanner('qr-video', (content) => {
+              if (content.data && isReady) {
+                SuperScan('{% url 'cool_meals_api' %}', content.data)
+                isReady = false;
+                setTimeout(()=>{
+                  isReady = true;
+                }, 1000)
+              }
+              console.log("SCANED: "+ content.data);
+            }, {
+              popup: false,
+            })
+            scanner.show();
+          })
 
-                      // Whether to horizontally mirror the video preview. This is helpful when trying to
-                      // scan a QR code with a user-facing camera. Default true.
-                      mirror: true,
+          // Core function to send data to meals API
+          function SuperScan(theUrl, content) {
+            $.ajax({
+              type: "POST",
+              url: theUrl,
+              data: {
+                csrfmiddlewaretoken: '{{ csrf_token }}',
+                meal_id: '{{ meal.id }}',
+                qr_id: content,
+              },
+              success: function (data, status, jqXHR) {
+                if (jqXHR.status != 200) {
+                  $('#no').fadeOut("fast");
+                  $('#no').fadeIn("fast");
+                  document.getElementById('success').style.display = "none";
+                  document.getElementById('deny').innerHTML = "Something went wrong.";
+                }
 
-                      // Whether to include the scanned image data as part of the scan result. See the "scan" event
-                      // for image format details. Default false.
-                      captureImage: false,
+                if (data.success == true) { // 200 ok means can eat
+                  // show success alert
 
-                      // Only applies to continuous mode. Whether to actively scan when the tab is not active.
-                      // When false, this reduces CPU usage when the tab is not active. Default true.
-                      backgroundScan: true,
+                  $('#success').fadeOut("fast");
+                  $('#success').fadeIn("fast");
+                  // Display user's diet
 
-                      // Only applies to continuous mode. The period, in milliseconds, before the same QR code
-                      // will be recognized in succession. Default 5000 (5 seconds).
-                      refractoryPeriod: 5000,
+                  // console.log(data.responseText.diet);
+                  document.getElementById('succ').innerHTML = "User allowed to entry <br> Diet: <b>" + data.diet + "</b>";
+                  // hide no pass alert
+                  document.getElementById('no').style.display = "none";
 
-                      // Only applies to continuous mode. The period, in rendered frames, between scans. A lower scan period
-                      // increases CPU usage but makes scan response faster. Default 1 (i.e. analyze every frame).
-                      scanPeriod: 1
-                    };
-                    let scanner = new Instascan.Scanner(opts);
+                } else { // else, (may be 400). Has already eatern.
+                  // hide success alert
+                  document.getElementById('success').style.display = "none";
 
-                    // When scanner detects a qr code, call this function
-                    scanner.addListener('scan', function (content) {Scan(content);});
+                  document.getElementById('deny').innerHTML = data.error;
+                  // show no pass alert
+                  $('#no').fadeOut("fast");
+                  $('#no').fadeIn("fast");
+                  // hide alert after time desired.
 
-                    function Scan(content) {
-
-                      // send data to api
-                      SuperScan("{% url 'cool_meals_api' %}",content);
-                      // get status code
-
-
-                      }
-
-
-
-
-                    Instascan.Camera.getCameras().then(function (cameras) {
-                      if (cameras.length > 0) {
-                        let cameraId = localStorage.getItem("camera-id")
-                        if (cameraId === null) {
-                            cameraId = "0"
-                            localStorage.setItem("camera-id", cameraId)
-                        }
-                        // For every camera available, craete an option at the select input.
-                        for (let c = 0; c < cameras.length; c++) {
-                            var option = document.createElement('option');
-                            option.innerText = cameras[c].name;
-                            option.value = c;
-                            document.getElementById('btndivs').appendChild(option);
-                        }
-                        document.getElementById('btndivs').value = cameraId
-                        scanner.start(cameras[parseInt(cameraId)])
-                      } else {
-                        console.error('No cameras found.');
-                      }
-                    }).catch(function (e) {
-                      console.error(e);
-                    });
-
-                    function changeCam(){
-                      // Function called everytime select input changes from value.
-                      // Used to start the scanner with the selected camera.
-                      var x = document.getElementById('btndivs').value;
-                      if(x != "null"){
-                          Instascan.Camera.getCameras().then(function (cameras) {
-                            scanner.stop();
-                            localStorage.setItem("camera-id", x.toString())
-                            scanner.start(cameras[x]);
-                          }).catch(function (e) {
-                            console.error(e);
-                          });
-                        }
-                    }
-                    // Change text value to display range value im ms
-                  //   document.getElementById("time").oninput = function() {
-                  //     document.getElementById("dtime").innerHTML = this.value+" ms";
-                  // }
-
-                  // Core function to send data to meals API
-                    function SuperScan(theUrl, content)
-                  {
-                    $.ajax({
-                      type: "POST",
-                      url: theUrl,
-                      data: {
-                          csrfmiddlewaretoken: '{{ csrf_token }}',
-                          meal_id:'{{ meal.id }}',
-                          qr_id:content,
-                        },
-                      success: function (data, status, jqXHR) {
-                        if(jqXHR.status != 200){
-                          $('#no').fadeOut("fast");
-                          $('#no').fadeIn("fast");
-                          document.getElementById('success').style.display = "none";
-                          document.getElementById('deny').innerHTML = "Something went wrong.";
-                        }
-
-                        if(data.success == true){ // 200 ok means can eat
-                        // show success alert
-
-                        // document.getElementById('success').style.display = "block";
-                        $('#success').fadeOut("fast");
-                        $('#success').fadeIn("fast");
-                        // Display user's diet
-
-                        // console.log(data.responseText.diet);
-                        document.getElementById('succ').innerHTML = "User allowed to entry <br> Diet: <b>" + data.diet +"</b>";
-                        // hide no pass alert
-                        document.getElementById('no').style.display = "none";
-
-                      } else { // else, (may be 400). Has already eatern.
-                        // hide success alert
-                        document.getElementById('success').style.display = "none";
-
-                        document.getElementById('deny').innerHTML = data.error;
-                        // show no pass alert
-                        $('#no').fadeOut("fast");
-                        $('#no').fadeIn("fast");
-                        // hide alert after time desired.
-
-                      }
-                      }
+                }
+              }
 
 
-                    });
-                  }
+            });
+          }
 
 
+        </script>
+      </div>
 
-                   </script>
-            </div>
-
-          </div>
-          <a class="btn btn-default btn-block" href="{% url back %}">< Back</a>
-</div>
+    </div>
+    <a class="btn btn-default btn-block" href="{% url back %}">< Back</a>
+  </div>
 {% endblock %}
 
 
