--- a/app/templates/base_email.html
+++ b/app/templates/base_email.html
@@ -8,7 +8,7 @@
     <title>{{ subject }}</title>
     <style type="text/css">
 	a {
-	    color: #1e53a2;
+	    color: #BEB771;
 	    text-decoration: none;
 	    -webkit-transition: all .1s linear;
 	    -moz-transition: all .1s linear;
@@ -17,7 +17,7 @@
 	}
 
 	a:hover, a:active, a:focus {
-	    color: #1a488c;
+	    color: #67622f;
 	    text-decoration: none;
 	}
 
@@ -102,12 +102,12 @@
             }
 
             .btn-primary table td:hover {
-                background-color: #1a488c !important;
+                background-color: #67622f !important;
             }
 
             .btn-primary a:hover {
-                background-color: #1a488c !important;
-                border-color: #1a488c !important;
+                background-color: #67622f !important;
+                border-color: #67622f !important;
             }
         }
     </style>
